# telebotrs

./: Cargo.toml  README.md
example/: Cargo.toml
example/src/: main.rs
src/: bot.rs  lib.rs
src/types/: animation.rs  content_type.rs  document.rs  message.rs  message_header.rs  message_parse_object.rs  mod.rs  photo_size.rs  sticker.rs  user.rs  video.rs
src/types/data_types/: animation.rs  audio.rs  chat.rs  contact.rs  dice.rs  document.rs  forum_topic_closed.rs  forum_topic_created.rs  forum_topic_reopened.rs  game.rs  invoice.rs  location.rs  madtc.rs  message_entity.rs  mod.rs  passport_data.rs  photo_size.rs  poll.rs  proximity_alert_triggered.rs  sticker.rs  successful_payment.rs  user.rs  venue.rs  video.rs  video_chat_ended.rs  video_chat_participants_invited.rs  video_chat_scheduled.rs  video_chat_started.rs  video_note.rs  voice.rs  web_app_data.rs
src/types/keyboard_types/: inline_kb_markup.rs  mod.rs
src/types/message_types/: mod.rs  text_message.rs
telebotrs_macro/: Cargo.toml
telebotrs_macro/src/: lib.rs
