[package]
name = "telebotrs"
version = "0.1.0"
edition = "2021"

[dependencies]
telebotrs_macro = { path="./telebotrs_macro", optional=true }
serde = { version = "1.0.152", features = ["derive"] }
reqwest = "0.11.14"
serde_json = "1.0.91"
anyhow = "1.0.68"

[features]
message_handler = ["dep:telebotrs_macro"]
